[package]
name = "restapi-docker"
version = "0.1.0"
authors = ["kmeg <ptiroat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
log = ""
env_logger = ""
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
futures = ""